# fq_Rust

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  RUST_HYBRID_BLUEPRINT.md  docker-compose.yml  sidecar-openapi.yaml  start.sh
.github/workflows/: build-sdk-from-system-image.yml  ci.yml  docker-publish.yml
api/: Cargo.toml
api/src/: auto_heal.rs  cache.rs  config.rs  db_cache.rs  device_pool.rs  encoding.rs  fq.rs  main.rs  models.rs  registerkey.rs  signer.rs  state.rs  upstream.rs
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: cache.rs  config.rs  content.rs  encoding.rs  fq.rs  main.rs  models.rs  registerkey.rs  sidecar.rs  signer.rs  state.rs  upstream.rs
configs/: api.example.yaml  config.yaml
crates/api/src/: cache.rs  config.rs  content.rs  db_cache.rs  device_pool.rs  fq.rs  main.rs  models.rs  registerkey.rs  signer.rs  state.rs  upstream.rs
crates/signer-native/: Cargo.toml  build.rs
crates/signer-native/src/: runtime.rs
crates/signer-native/src/worker/: idle_fq_native.rs
scripts/: container-entrypoint.sh
sidecar/: Dockerfile  pom.xml
sidecar/src/main/java/com/mengying/fqnovel/: SidecarApplication.java  SidecarWorker.java
sidecar/src/main/java/com/mengying/fqnovel/config/: InternalApiProperties.java  RestTemplateConfig.java  SidecarUpstreamProperties.java  UnidbgProperties.java
sidecar/src/main/java/com/mengying/fqnovel/dto/: ApiEnvelope.java  DeviceProfile.java  FqRegisterKeyPayload.java  FqRegisterKeyPayloadResponse.java  FqRegisterKeyResponse.java  RegisterKeyInvalidateRequest.java  RegisterKeyInvalidateResult.java  RegisterKeyResolveRequest.java  RegisterKeyResolveResult.java  SignRequest.java  SignResult.java  WorkerRequest.java  (+4 more)
sidecar/src/main/resources/: application.yml
signer/: pom.xml
signer-native/: Cargo.toml
signer-native/src/: lib.rs  main.rs  runtime.rs  worker.rs
signer-native/src/worker/: idle_fq_native.rs
signer/src/main/java/com/mengying/fqnovel/: ConsoleNoiseFilter.java  SignerWorker.java
tools/: import_rnidbg_sdk.sh
(+21 files in other folders)
