[package]
name = "fq-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
cbc = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dashmap = "6"
flate2 = "1"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "gzip", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1"
